[package]
name = "isgermanybrokeyet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.39"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
tracing = "0.1.41"
